infra/prod/app/mock.yaml
# ----------------------------------------
# Deployment + Service for "site" backend
# ----------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: nginx
        image: nginx:latest
      - name: DATABASE_USERNAME
        valueFrom:
          secretKeyRef:
            name: project.psql.credentials.postgresql.acid.zalan.do
            key: username
      - name: DATABASE_PASSWORD
        valueFrom:
          secretKeyRef:
            name: project.psql.credentials.postgresql.acid.zalan.do
            key: password
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: site
---
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: site
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

# -------------------
# ConfigMap for "app"
# -------------------
---
# ---------------------------------------
# Deployment + Service for "app" backend
# ---------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: app
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

# -------------------
# ConfigMap for "api"
# -------------------
---
# ----------------------------------------
# Deployment + Service for "api" backend
# ----------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
